# gnome-shell-extension-bumblebee-status

./: .gitignore  Makefile.am  README.md  configure.ac
icons/: Makefile.am
po/: Makevars  gnome-shell-extension-bumblebee-status.pot  pt_BR.po
src/: Makefile.am  extension.js  metadata.json
