#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([GNOME Shell Extension Bumblebee Status], [1], [https://github.com/dsboger/gnome-shell-extension-bumblebee-status/issues], [gnome-shell-extension-bumblebee-status], [https://github.com/dsboger/gnome-shell-extension-bumblebee-status])
AC_CONFIG_SRCDIR([src/extension.js])
AC_CONFIG_AUX_DIR([acaux])

# Checks for programs.
AC_PROG_INSTALL
AM_GNU_GETTEXT([external])
AM_GNU_GETTEXT_VERSION([0.19.7])

AM_INIT_AUTOMAKE([1.15 foreign])
AC_CONFIG_FILES([Makefile src/Makefile icons/Makefile po/Makefile.in])
AC_OUTPUT
